test/asm/rept-shift.err
ERROR: rept-shift.asm(17) -> rept-shift.asm::m(14):
    Macro argument '\1' not defined
